syntax = "proto3";

package foodfund.user;

// User Service for internal communication
service UserService {
  // Create user from auth service
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  
  // Create staff user from admin service
  rpc CreateStaffUser(CreateStaffUserRequest) returns (CreateStaffUserResponse);
  
  // Get user by Cognito ID
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  
  // Get user by database ID
  rpc GetUserById(GetUserByIdRequest) returns (GetUserResponse);
  
  // Update user profile
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  
  // Check if user exists
  rpc UserExists(UserExistsRequest) returns (UserExistsResponse);
  
  // Get user by email
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserResponse);
}

// Messages
message User {
  string id = 1;
  string cognito_id = 2;
  string email = 3;
  string username = 4;
  string full_name = 5;
  string phone_number = 6;
  string avatar_url = 7;
  string bio = 8;
  Role role = 9;
  bool is_active = 10;
  string created_at = 11;
  string updated_at = 12;
}

enum Role {
  DONOR = 0;
  FUNDRAISER = 1;
  KITCHEN_STAFF = 2;
  DELIVERY_STAFF = 3;
  ADMIN = 4;
}

// Create User
message CreateUserRequest {
  string cognito_id = 1;
  string email = 2;
  string username = 3;
  string full_name = 4;
  string phone_number = 5;
  Role role = 6;
  map<string, string> cognito_attributes = 7;
}

message CreateUserResponse {
  bool success = 1;
  User user = 2;
  string error = 3;
}

// Get User by Cognito ID
message GetUserRequest {
  string cognito_id = 1; // Primary identifier
}

// Get User by Database ID
message GetUserByIdRequest {
  string id = 1; // Database ID
}

message GetUserResponse {
  bool success = 1;
  User user = 2;
  string error = 3;
}

// Update User
message UpdateUserRequest {
  string id = 1;
  string full_name = 2;
  string phone_number = 3;
  string avatar_url = 4;
  string bio = 5;
}

message UpdateUserResponse {
  bool success = 1;
  User user = 2;
  string error = 3;
}

// User Exists
message UserExistsRequest {
  string cognito_id = 1;
}

message UserExistsResponse {
  bool exists = 1;
  string user_id = 2;
}

// Get User by Email
message GetUserByEmailRequest {
  string email = 1;
}

// Create Staff User
message CreateStaffUserRequest {
  string cognito_id = 1;
  string email = 2;
  string username = 3;
  string full_name = 4;
  string phone_number = 5;
  string avatar_url = 6;
  Role role = 7;
  string bio = 8;
  string organization_address = 9; // For FUNDRAISER
}

message CreateStaffUserResponse {
  bool success = 1;
  User user = 2;
  string error = 3;
}